fix(bug): Update the storage and fix other bugs. (#97)
